# mincg

./: README.md
pctool/: Makefile  main.c
pctool/data/: 01230B3C_SMI_KEYS.SMI_KEY  01230B3C_SMI_NOUTER.SMI_e1  05508521_SMI_HEADER.SMI_HDR  05508521_SMI_NOUTER.SMI_e1  056449A8_SMI_NOUTER.SMI_e1  06D40A5E_SMI_HEADER.SMI_HDR  06D40A5E_SMI_KEYS.SMI_KEY  06D40A5E_SMI_NOUTER.SMI_e1  09359F8F_SMI_NOUTER.SMI_e1  0E3F3DD4_SMI_NOUTER.SMI_e1  0EADF664_SMI_NOUTER.SMI_e1  111030F4_SMI_HEADER.SMI_HDR  111030F4_SMI_NOUTER.SMI_e1  126ACFC2_SMI_KEYS.SMI_KEY  126ACFC2_SMI_NOUTER.SMI_e1  13904046_SMI_NOUTER.SMI_e1  1440EAC3_SMI_KEYS.SMI_KEY  1440EAC3_SMI_NOUTER.SMI_e1  16A1EFD5_SMI_KEYS.SMI_KEY  16A1EFD5_SMI_NOUTER.SMI_e1  1ACE8894_SMI_HEADER.SMI_HDR  1ACE8894_SMI_NOUTER.SMI_e1  1D921E27_SMI_NOUTER.SMI_e1  1E3F58E0_SMI_NOUTER.SMI_e1  1EF50F2F_SMI_HEADER.SMI_HDR  1EF50F2F_SMI_KEYS.SMI_KEY  1EF50F2F_SMI_NOUTER.SMI_e1  20A3FB53_SMI_NOUTER.SMI_e1  23CD9E33_SMI_KEYS.SMI_KEY  23CD9E33_SMI_NOUTER.SMI_e1  290CA3EA_SMI_KEYS.SMI_KEY  290CA3EA_SMI_NOUTER.SMI_e1  2CE125F4_SMI_NOUTER.SMI_e1  311A2E6A_SMI_NOUTER.SMI_e1  33EC934C_SMI_NOUTER.SMI_e1  34D1B832_SMI_KEYS.SMI_KEY  34D1B832_SMI_NOUTER.SMI_e1  35164D80_SMI_KEYS.SMI_KEY  35164D80_SMI_NOUTER.SMI_e1  35EB1CD6_SMI_KEYS.SMI_KEY  (+155 more)
pctool/keys/: 0.SMI_KEY  10.SMI_KEY  100.SMI_KEY  102.SMI_KEY  103.SMI_KEY  104.SMI_KEY  105.SMI_KEY  106.SMI_KEY  107.SMI_KEY  11.SMI_KEY  111.SMI_KEY  112.SMI_KEY  113.SMI_KEY  115.SMI_KEY  118.SMI_KEY  119.SMI_KEY  12.SMI_KEY  121.SMI_KEY  122.SMI_KEY  123.SMI_KEY  124.SMI_KEY  13.SMI_KEY  17.SMI_KEY  18.SMI_KEY  19.SMI_KEY  2.SMI_KEY  20.SMI_KEY  22.SMI_KEY  25.SMI_KEY  26.SMI_KEY  27.SMI_KEY  28.SMI_KEY  29.SMI_KEY  30.SMI_KEY  35.SMI_KEY  37.SMI_KEY  4.SMI_KEY  43.SMI_KEY  44.SMI_KEY  45.SMI_KEY  (+35 more)
vita/: CMakeLists.txt
vita/app/: main.c
vita/payload/dec_SMI/: main.c
vita/plugin/: logging.h  mincg.c  mincg.yml
